# style

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/styletextdocument/: CMakeLists.txt  abstractstyle.cpp  abstractstyle.h  abstracttextdocument.cpp  abstracttextdocument.h  abstracttextparagraph.cpp  abstracttextparagraph.h  overloadableproperty.h  paragraphstyle.cpp  paragraphstyle.h  spanstyle.cpp  spanstyle.h  spanview.cpp  spanview.h  stylemanager.cpp  stylemanager.h  styletextdocument_global.h  unitvalue.cpp  unitvalue.h
prog/: CMakeLists.txt
